--- a/mainhome.html
+++ b/mainhome.html
@@ -6,40 +6,100 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>clonetube homepage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <style></style>
+    <style>
+        
+        body {
+            padding-top: 50px;
+        }
+
+        /* 브라우저 크기에 따른 디자인을 하기위해 미디어 쿼리 사용 */
+        @media (min-width: 992px) /* 브라우저 크기가 992px 이하일때 아래의 스타일 적용 */
+                                  /* 992px은 bootstrap에서 큰 장치의 표춘값 */
+        {
+            .sidebar-pc /* 큰 화면에서 사이드 바 스타일 */
+            {
+                position: fixed;
+                top: 56px;
+                left: 0;
+                bottom: 0;
+                z-index: 1000;
+                width: 240px;
+                padding-top: 1rem;
+                overflow-y: auto;
+                background-color: #f8f9fa;
+                border-right: 1px solid #e9ecef;
+            }
+            .main-content {
+                margin-left: 240px;
+            }
+        }
+
+        
+        .offcanvas     /* 작은 화면 전용 스타일 */
+        {
+            width: 240px;
+        }
+        .offcanvas-body 
+        {
+            padding-bottom: 20px;
+        }
+
+
+        .sidebar-menu .nav-link,    /* 사이드 바 기본 스타일 */
+        .offcanvas-body .nav-link 
+        {
+            padding: 8px 16px;
+            color: #212529;
+            display: flex;
+            align-items: center;
+        }
+
+        .sidebar-menu .nav-link:hover,   /* 마우스 포인터가 올라가 있는 메뉴 회색배경처리 */
+        .offcanvas-body .nav-link:hover {
+            background-color: #e9ecef;
+        }
+
+        .sidebar-menu .nav-link.active, /* 선택된 메뉴 강조 처리 */
+        .offcanvas-body .nav-link.active {
+            background-color: #f0f0f0;
+            font-weight: bold;
+        }
+
+        .sidebar-menu h6, /* 사이드 바 소 제목 스타일 */
+        .offcanvas-body h6 {
+            margin-top: 15px;
+            margin-bottom: 5px;
+            padding-left: 16px;
+            color: #606060;
+            font-size: 0.9rem;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm"> <!-- 상단 바 속성 -->
+        <div class="container-fluid"> <!-- 상단 바 너비를 브라우저 크기에 맞춤 -->
             <div class="d-flex align-items-center">
                 <button class="btn btn-light me-2 d-lg-none" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#sidebarMenu" aria-controls="sidebarMenu"></button>
-                <a class="navbar-brand d-flex align-items-center" href="#" onclick="location.reload(); return false;">
+                    data-bs-target="#sidebarMenu" aria-controls="sidebarMenu">☰</button> <!-- 햄버거 메뉴 아이콘 속서ㅇ -->
+                <a class="navbar-brand d-flex align-items-center" href="#" onclick="location.reload(); return false;"> <!-- 로고 클릭시 리로드 -->
                     <img src="image.png" alt="YouTube Logo" class="img-fluid d-inline-block align-text-top me-1"
                         style="height: 30px" />
                 </a>
             </div>
 
-            <div class="d-none d-lg-flex flex-grow-1 justify-content-center mx-3">
-                <form class="d-flex w-50">
-                    <input class="form-control me-2 rounded-pill px-3" type="search" placeholder="검색"
-                        aria-label="Search" />
-                    <button class="btn btn-outline-secondary rounded-pill" type="submit">
-                        검색
-                    </button>
-                </form>
-            </div>
 
-            <div class="d-flex align-items-center ms-auto">
-                <button class="btn btn-light d-lg-none" type="button">🔍</button>
-                <button class="btn btn-light d-none d-lg-block" type="button">
+            <div class="d-flex align-items-center ms-auto"> <!-- 상단 바 구성 -->
+                <button class="btn btn-light d-block" type="button"> <!-- bootstrap의 btn-light 스타일 사용 -->
+                    검색
+                </button>
+                <button class="btn btn-light d-block" type="button">
                     음성인식버튼
                 </button>
-                <button class="btn btn-light d-none d-lg-block" type="button">
+                <button class="btn btn-light d-block" type="button">
                     만들기버튼
                 </button>
-                <button class="btn btn-light d-none d-lg-block" type="button">
+                <button class="btn btn-light d-block" type="button">
                     알림
                 </button>
                 <button class="btn btn-light" type="button">
@@ -49,7 +109,349 @@
         </div>
     </nav>
 
+    <div class="offcanvas offcanvas-start bg-light d-lg-none" id="sidebarMenu"> <!-- 펼쳐진 사이드 바 속성 -->
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="sidebarMenuLabel">
+                <img src="image.png" alt="YouTube Logo" width="20" height="20"
+                    class="d-inline-block align-text-top me-2">
+                YouTube
+            </h5>
+            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body sidebar-menu">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        홈
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        Shorts
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        구독
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        YouTube Music
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <h6>내 페이지</h6>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        시청 기록
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        재생목록
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        내 동영상
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        나중에 볼 동영상
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        좋아요 표시한 동영상
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        오프라인 저장 동영상
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        내 클립
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <h6>구독</h6>
+            <ul class="nav flex-column">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        모든 구독
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <h6>탐색</h6>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        인기 급상승
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        쇼핑
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        음악
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        영화
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        실시간
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        게임
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        스포츠
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        학습 프로그램
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        팟캐스트
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <h6>YouTube 더보기</h6>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        YouTube 스튜디오
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        YouTube Music
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        설정
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        신고 기록
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        고객센터
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        의견 보내기
+                    </a>
+                </li>
+            </ul>
+            <hr>
+        </div>
+    </div>
+
+    <nav class="sidebar-pc d-none d-lg-block">
+        <div class="sidebar-menu">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">
+                        홈
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        Shorts
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        구독
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        YouTube Music
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <h6>내 페이지</h6>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        시청 기록
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        재생목록
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        내 동영상
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        나중에 볼 동영상
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        좋아요 표시한 동영상
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        오프라인 저장 동영상
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        내 클립
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <h6>구독</h6>
+            <ul class="nav flex-column">
+
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        모든 구독
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <h6>탐색</h6>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        인기 급상승
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        쇼핑
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        음악
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        영화
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        실시간
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        게임
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        스포츠
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        학습 프로그램
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        팟캐스트
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <h6>YouTube 더보기</h6>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        YouTube 스튜디오
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        YouTube Music
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        설정
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        신고 기록
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        고객센터
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">
+                        의견 보내기
+                    </a>
+                </li>
+            </ul>
+            <hr>
+            <div class="text-muted small px-3">
+                <p>
+                    © 2025 Google LLC, Sundar Pichai, 1600 Amphitheatre Parkway, Mountain View CA 94043, USA,
+                    0807-882-594 (무료), yt-support-solutions-kr@google.com, 호스팅: Google LLC, 사업자정보, 불법촬영물 신고
+                    크리에이터들이 유튜브 상에 게시, 태그 또는 추천한 상품들은 판매자들의 약관에 따라 판매됩니다. 유튜브는 이러한 제품들을 판매하지 않으며, 그에 대한 책임을 지지 않습니다</p>
+            </div>
+        </div>
+    </nav>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+</html>
 
 </html>
