--- a/subscription.html
+++ b/subscription.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>clonetube homepage</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <style>
@@ -129,7 +130,7 @@
             /* 영상 제목 스타일 */
             font-size: 1rem;
             font-family: "Noto Sans KR", "Apple SD Gothic Neo", "Malgun Gothic", sans-serif;
-            font-weight: 550;
+            font-weight: 530;
             line-height: 1.3;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -273,9 +274,8 @@
         .mic-btn:active {
             background: #d5d5d5;
         }
-
     </style>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -311,10 +311,12 @@
             </button>
 
             <div class="d-flex align-items-center">
-                <button class="btn btn-light d-block" type="button" style="background-color: #f0eaea; border-radius: 33px !important;width: auto !important;padding: 8px 16px !important;">
+                <button class="btn btn-light d-block" type="button"
+                    style="background-color: #f0eaea; border-radius: 33px !important;width: auto !important;padding: 8px 16px !important;">
                     <i class="material-icons" style="font-size: 19px;">add 만들기</i>
                 </button>
-                <button class="btn btn-light d-block" type="button" style="border-radius: 50% !important;width: 40px;height: 40px; display: flex !important;align-items: center;justify-content: center; padding: 0;">
+                <button class="btn btn-light d-block" type="button"
+                    style="border-radius: 50% !important;width: 40px;height: 40px; display: flex !important;align-items: center;justify-content: center; padding: 0;">
                     <i class="material-icons">notifications</i>
                 </button>
                 <div class="d-flex align-items-center ms-auto">
@@ -400,7 +402,7 @@
         <div class="offcanvas-body sidebar-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="mainhome.html">
+                    <a class="nav-link" href="mainhome.html">
                         <i class="material-icons me-2">home</i>
                         홈
                     </a>
@@ -412,7 +414,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="subscription.html">
+                    <a class="nav-link active" aria-current="page" href="subscription.html">
                         <i class="material-icons me-2">subscriptions</i>
                         구독
                     </a>
@@ -595,7 +597,7 @@
         <div class="sidebar-menu">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">
+                    <a class="nav-link" href="mainhome.html">
                         <i class="material-icons me-2">home</i>
                         홈
                     </a>
@@ -607,7 +609,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="subscription.html">
+                    <a class="nav-link active" aria-current="page" href="subscription.html">
                         <i class="material-icons me-2">subscriptions</i>
                         구독
                     </a>
@@ -785,49 +787,116 @@
             </div>
         </div>
     </nav>
-    <main class="main-content" style="margin-top: 10px;">
-        <div class="container-fluid py-4">
+    <main class="main-content">
+        <div class="d-flex justify-content-between align-items-center px-4 py-3">
+            <p style="margin-top: 15px; font-size: 20px; font-weight: 1000;">최신순</p>
+            <div class="d-flex align-items-center">
+                <button class="btn btn-light me-2" type="button" style="background-color: white!important;border-radius: 33px !important;width: auto !important;padding: 8px 16px !important;">
+                    <span style= "color: blue;">관리</span>   
+                </button>
+                <button class="btn btn-light me-2" type="button" style="border-radius: 50% !important;width: 40px;height: 40px; display: flex !important;align-items: center;justify-content: center; padding: 0;">
+                    <i class="material-icons">grid_view</i>
+                </button>
+                <button class="btn btn-light" type="button" style="border-radius: 50% !important;width: 40px;height: 40px; display: flex !important;align-items: center;justify-content: center; padding: 0;">
+                    <i class="material-icons">view_list</i>
+                </button>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="container-fluid py-4" style="margin-top: -35px;">
             <div class="row">
                 <div class="col-12 col-sm-6 col-lg-4 mb-4">
                     <div class="video">
-                        <img src="mainhomethumnail/whatis.png" class="img-fluid thumbnail" alt="동영상 썸네일 1">
+                        <img src="subscriptionthumnail/thm1.png" class="img-fluid thumbnail" alt="동영상 썸네일 1">
                         <div class="video-info">
-                            <img src="mainhomethumnail/동공이약사.png" class="channel-profile" alt="채널1 프로필">
+                            <img src="subscriptionthumnail/apple.png" class="channel-profile" alt="채널1 프로필">
                             <div class="text-content">
                                 <div class="d-flex justify-content-between align-items-start">
-                                    <h5 class="video-title">도움을 줄 수 있음이 뭐예요?</h5>
+                                    <h5 class="video-title">게임 불법복제에 대한 개발자들의 귀여운 복수</h5>
                                     <i class="material-icons more-options">more_vert</i>
                                 </div>
-                                <p class="channel-name">동공이 약사</p>
-                                <p class="video-meta">조회수 4.5만회 • 1개월 전</p>
+                                <p class="channel-name">코딩애플</p>
+                                <p class="video-meta">조회수 5.5만회 • 21시간 전</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4 mb-4">
                     <div class="video">
-                        <img src="mainhomethumnail/vibecoding.png" class="img-fluid thumbnail" alt="동영상 썸네일 2">
+                        <img src="subscriptionthumnail/thm3.png" class="img-fluid thumbnail" alt="동영상 썸네일 2">
                         <div class="video-info">
-                            <img src="mainhomethumnail/코딩애플.png" class="channel-profile" alt="코딩애플">
+                            <img src="subscriptionthumnail/apple.png" class="channel-profile" alt="코딩애플">
                             <div class="text-content">
                                 <div class="d-flex justify-content-between align-items-start">
                                     <h5 class="video-title">솔직히 바이브코딩 좋은듯</h5>
                                     <i class="material-icons more-options">more_vert</i>
                                 </div>
                                 <p class="channel-name">코딩애플</p>
-                                <p class="video-meta">조회수 16만회 • 2주 전</p>
+                                <p class="video-meta">조회수 11만회 • 7일 전</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4 mb-4">
                     <div class="video">
-                        <img src="mainhomethumnail/changepw.png" class="img-fluid thumbnail" alt="동영상 썸네일 3">
+                        <img src="subscriptionthumnail/thm2.png" class="img-fluid thumbnail" alt="동영상 썸네일 3">
                         <div class="video-info">
-                            <img src="mainhomethumnail/코딩애플.png" class="channel-profile" alt="채널3 프로필">
+                            <img src="subscriptionthumnail/apple.png" class="channel-profile" alt="채널3 프로필">
                             <div class="text-content">
                                 <div class="d-flex justify-content-between align-items-start">
-                                    <h5 class="video-title">한국에만 있는 이상한 비밀번호 관리법</h5>
+                                    <h5 class="video-title">진격의거인보면 네트워크 고수됨</h5>
+                                    <i class="material-icons more-options">more_vert</i>
+                                </div>
+                                <p class="channel-name">코딩애플</p>
+                                <p class="video-meta">조회수 15만회 • 3주 전</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 mb-4">
+                    <div class="video">
+                        <img src="subscriptionthumnail/thm4.png" class="img-fluid thumbnail" alt="동영상 썸네일 4">
+                        <div class="video-info">
+                            <img src="subscriptionthumnail/apple.png" class="channel-profile" alt="채널4 프로필">
+                            <div class="text-content">
+                                <div class="d-flex justify-content-between align-items-start">
+                                    <h5 class="video-title">케로로 소대원들의 약빤 골프실력</h5>
+                                    <i class="material-icons more-options">more_vert</i>
+                                </div>
+                                <p class="channel-name">코딩애플</p>
+                                <p class="video-meta">조회수 36만회 • 4주 전</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 mb-4">
+                    <div class="video">
+                        <img src="subscriptionthumnail/thm5.png" class="img-fluid thumbnail" alt="동영상 썸네일 5">
+                        <div class="video-info">
+                            <img src="subscriptionthumnail/apple.png" class="channel-profile" alt="채널5 프로필">
+                            <div class="text-content">
+                                <div class="d-flex justify-content-between align-items-start">
+                                    <h5 class="video-title">귀여운 오버플로우 버그는 왜 일어날까</h5>
+                                    <i class="material-icons more-options">more_vert</i>
+                                </div>
+                                <p class="channel-name">코딩애플</p>
+                                <p class="video-meta">조회수 13만회 • 1개월 전</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-lg-4 mb-4">
+                    <div class="video">
+                        <img src="subscriptionthumnail/thm6.png" class="img-fluid thumbnail" alt="동영상 썸네일 6">
+                        <div class="video-info">
+                            <img src="subscriptionthumnail/apple.png" class="channel-profile" alt="채널6 프로필">
+                            <div class="text-content">
+                                <div class="d-flex justify-content-between align-items-start">
+                                    <h5 class="video-title">바퀴 때문에 사람이 도망간 집!! 바퀴벌레 서식지 파괴 했습니다.</h5>
                                     <i class="material-icons more-options">more_vert</i>
                                 </div>
                                 <p class="channel-name">코딩애플</p>
@@ -838,96 +907,48 @@
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4 mb-4">
                     <div class="video">
-                        <img src="mainhomethumnail/keroro.png" class="img-fluid thumbnail" alt="동영상 썸네일 4">
+                        <img src="subscriptionthumnail/thm7.png" class="img-fluid thumbnail" alt="동영상 썸네일 7">
                         <div class="video-info">
-                            <img src="mainhomethumnail/추추.png" class="channel-profile" alt="채널4 프로필">
+                            <img src="subscriptionthumnail/apple.png" class="channel-profile" alt="채널7 프로필">
                             <div class="text-content">
                                 <div class="d-flex justify-content-between align-items-start">
-                                    <h5 class="video-title">케로로 소대원들의 약빤 골프실력</h5>
+                                    <h5 class="video-title">링크 하나로 진짜 개인정보를 '털'수 있을까</h5>
                                     <i class="material-icons more-options">more_vert</i>
                                 </div>
-                                <p class="channel-name">추추</p>
-                                <p class="video-meta">조회수 8.9만회 • 5개월 전</p>
+                                <p class="channel-name">코딩애플</p>
+                                <p class="video-meta">조회수 13만회 • 1개월 전</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4 mb-4">
                     <div class="video">
-                        <img src="mainhomethumnail/babkimkuk.png" class="img-fluid thumbnail" alt="동영상 썸네일 5">
+                        <img src="subscriptionthumnail/thm8.png" class="img-fluid thumbnail" alt="동영상 썸네일 8">
                         <div class="video-info">
-                            <img src="mainhomethumnail/마소킴.png" class="channel-profile" alt="채널5 프로필">
+                            <img src="subscriptionthumnail/ren.png" class="channel-profile" alt="채널8 프로필">
                             <div class="text-content">
                                 <div class="d-flex justify-content-between align-items-start">
-                                    <h5 class="video-title">장어 덮밥을 심층으로 분석 해봤습니다. 이 영상을 보면 당신도 장어덮밥김국이 될 수 있습니다.</h5>
+                                    <h5 class="video-title">れん ONEMAN LIVE TOUR 2025 - Molt - Teaser</h5>
                                     <i class="material-icons more-options">more_vert</i>
                                 </div>
-                                <p class="channel-name">마법소년 김셰프</p>
-                                <p class="video-meta">조회수 5만회 • 4개월 전</p>
+                                <p class="channel-name">れん</p>
+                                <p class="video-meta">조회수 1.3만회 • 1개월 전</p>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-lg-4 mb-4">
                     <div class="video">
-                        <img src="mainhomethumnail/바퀴.png" class="img-fluid thumbnail" alt="동영상 썸네일 6">
+                        <img src="subscriptionthumnail/thm9.png" class="img-fluid thumbnail" alt="동영상 썸네일 9">
                         <div class="video-info">
-                            <img src="mainhomethumnail/쩔템.png" class="channel-profile" alt="채널6 프로필">
+                            <img src="subscriptionthumnail/ren.png" class="channel-profile" alt="채널9 프로필">
                             <div class="text-content">
                                 <div class="d-flex justify-content-between align-items-start">
-                                    <h5 class="video-title">바퀴 때문에 사람이 도망간 집!! 바퀴벌레 서식지 파괴 했습니다.</h5>
+                                    <h5 class="video-title">れん - 盾愛 (Music Video)</h5>
                                     <i class="material-icons more-options">more_vert</i>
                                 </div>
-                                <p class="channel-name">국가대표 쩔템</p>
-                                <p class="video-meta">조회수 65만회 • 4개월 전</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4 mb-4">
-                    <div class="video">
-                        <img src="mainhomethumnail/nenmaster.png" class="img-fluid thumbnail" alt="동영상 썸네일 7">
-                        <div class="video-info">
-                            <img src="mainhomethumnail/옥선생.png" class="channel-profile" alt="채널7 프로필">
-                            <div class="text-content">
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <h5 class="video-title">아무튼 자무기 먹었습니다!!! 세팅 갑니다!!!</h5>
-                                    <i class="material-icons more-options">more_vert</i>
-                                </div>
-                                <p class="channel-name">옥선생</p>
-                                <p class="video-meta">조회수 4.8만회 • 2개월 전</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4 mb-4">
-                    <div class="video">
-                        <img src="mainhomethumnail/입질썸네일1.png" class="img-fluid thumbnail" alt="동영상 썸네일 8">
-                        <div class="video-info">
-                            <img src="mainhomethumnail/입질의추억.png" class="channel-profile" alt="채널8 프로필">
-                            <div class="text-content">
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <h5 class="video-title">몰라서 안 사먹었더니 가격이 박살나고 있는 여름 보양식</h5>
-                                    <i class="material-icons more-options">more_vert</i>
-                                </div>
-                                <p class="channel-name">입질의추억TV</p>
-                                <p class="video-meta">조회수 48만회 • 13일 전</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-lg-4 mb-4">
-                    <div class="video">
-                        <img src="mainhomethumnail/enmeat.png" class="img-fluid thumbnail" alt="동영상 썸네일 9">
-                        <div class="video-info">
-                            <img src="mainhomethumnail/meatman.png" class="channel-profile" alt="채널9 프로필">
-                            <div class="text-content">
-                                <div class="d-flex justify-content-between align-items-start">
-                                    <h5 class="video-title">영국 육식 탐방기 : 억지 괴식 말고 "진짜" 영국의 맛</h5>
-                                    <i class="material-icons more-options">more_vert</i>
-                                </div>
-                                <p class="channel-name">육식맨 YOOXICMAN</p>
-                                <p class="video-meta">조회수 153만회 • 6개월 전</p>
+                                <p class="channel-name">れん</p>
+                                <p class="video-meta">조회수 21만회 • 1개월 전</p>
                             </div>
                         </div>
                     </div>
