Feat: video.html 기본틀작업

--- a/mainhome.html
+++ b/mainhome.html
@@ -30,7 +30,7 @@
                 width: 240px;
                 padding-top: 1rem;
                 overflow-y: auto;
-                background-color: #f8f9fa;
+           
                 border-right: 1px solid #e9ecef;
             }
 
@@ -279,7 +279,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top shadow-sm">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="d-flex align-items-center">
                 <button class="btn btn-light me-2 d-lg-none" type="button" data-bs-toggle="offcanvas"
@@ -389,7 +389,7 @@
         </div>
     </nav>
 
-    <div class="offcanvas offcanvas-start bg-light d-lg-none" id="sidebarMenu">
+    <div class="offcanvas offcanvas-start d-lg-none" id="sidebarMenu">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="sidebarMenuLabel">
                 <img src="YouTube_Premium_logo.png" alt="YouTube Logo" width="110" height="20"
